--- a/EmployeeExam/Views/Employees/Create.cshtml
+++ b/EmployeeExam/Views/Employees/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Добавить</h1>
 
-<h4>Employee</h4>
+<h4>Сотрудника</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -65,6 +65,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">К списку</a>
 </div>
 
