--- a/EmployeeExam/Views/Exam/Exam.cshtml
+++ b/EmployeeExam/Views/Exam/Exam.cshtml
@@ -42,7 +42,7 @@
         </label>
     </div>
     <hr />
-    <h5>@quest.Answer</h5>
+    @*<h5>@quest.Answer</h5>*@
 
     @Html.Hidden("Tabel_id", (int)ViewData["Tabel_id"])
     <input name="NumTicket" type="hidden" value=@ViewData["NumTicket"] />
