--- a/EmployeeExam/Views/Shared/_Layout.cshtml
+++ b/EmployeeExam/Views/Shared/_Layout.cshtml
@@ -79,6 +79,7 @@
                                     <li class="divider"></li>
                                     <li><a asp-area="" asp-controller="Questions" asp-action="Index" class="text-dark">Вопросы</a></li>
                                     <li><a asp-area="" asp-controller="Ticket" asp-action="Index" class="text-dark">Билеты</a></li>
+                                    <li><a href="/Identity/Account/Register?returnUrl=%2F" class="text-dark">Пользователи</a></li>
 
                                 </ul>
                             </li>
@@ -86,6 +87,7 @@
                                 <a id="drop1" class="nav-link text-dark dropdown-toggle" data-toggle="dropdown" href="#">Статистика</a>
                                 <ul class="dropdown-menu">
                                     <li><a asp-area="" asp-controller="Debtor" asp-action="Index" class="text-dark">Сдающие экзамен</a></li>
+                                   
                                     <li class="divider"></li>
                                 </ul>
                             </li>
