--- a/EmployeeExam/Views/Employees/Delete.cshtml
+++ b/EmployeeExam/Views/Employees/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Удалить работника</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы уверены?</h3>
 <div>
-    <h4>Employee</h4>
+    <h4>Сотрудник</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -70,6 +70,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Employee_id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">К списку</a>
     </form>
 </div>
